packages/rune/fixtures/corpus/invalid/typ-unknown-modifier.rune
[TYP:bogus] id: string
    a type using a modifier that does not exist
